--- a/src/assets/styles/basics/_base.scss
+++ b/src/assets/styles/basics/_base.scss
@@ -1,5 +1,6 @@
 * {
     box-sizing: border-box;
+    align-content: center;
 }
 
 html {
@@ -7,17 +8,20 @@ html {
     line-height: 1.6;
     background-color: #F5EFFF;
     font-weight: 100;
-
 }
-    
+
 body {
     margin: 0 auto;
-
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: rem(18px);
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
     margin: 0;
 }
 
