--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -18,5 +18,7 @@
 
 // Components
 @import "cmps/BookItem";
-@import "cmps/BookList";
+@import "cmps/BookWishlist";
+@import "cmps/BookSorting";
+
 
