--- a/src/assets/styles/cmps/BookWishlist.scss
+++ b/src/assets/styles/cmps/BookWishlist.scss
@@ -1,5 +1,5 @@
-.book-list {
-    ul {
+.book-wishlist {
+    .list {
         display: flex;
         flex-direction: column;
         gap: 0.5em;
@@ -24,19 +24,19 @@
             white-space: nowrap;
         }
 
-        &:hover{
+        &:hover {
             background-color: rgb(246, 246, 246);
             box-shadow: 5px 5px 5px rgb(95, 95, 95);
         }
 
-        button{
+        .remove-btn {
             background-color: #A594F9;
             font-weight: bold;
 
-            &:hover{
+            &:hover {
                 background-color: #a594f980
             }
         }
     }
-    
+
 }
